button fix on mobile

--- a/style.css
+++ b/style.css
@@ -52,12 +52,13 @@ button[disabled] {
 
 @media (max-width: 800px) {
   #timer {
-    font-size: 4rem;
-    width: 350px;
+    font-size: 3rem;
+    width: 300px;
   }
 
   button {
     font-size: 1.5rem;
-    padding: 1rem 2rem;
+    padding: 1rem 1.3rem;
+    border-radius: 25px;
   }
 }
